support for font alignment. needed to fix some css or rather missing css for the you tube seek to link.

--- a/public/stylesheets/sass/_publication_common.sass
+++ b/public/stylesheets/sass/_publication_common.sass
@@ -86,5 +86,11 @@ a.owner
     :text-decoration none
     :display block
 
+.you_tube_seek_to_link_element
+  a
+    @extend .text_element
+    :text-decoration none
+    :display block
+
 .you_tube_video_element
   @extend .twitter_element
